# LinuxSystem

./: README.md
docs/: 0001_Coding_Style.md  0002_define.md  0003_Cross_Compiler_Tools.md  0004_GPL.md  0005_devfs_udev.md  0006_bootargs_Module_Param.md  0007_Interrupt.md  0008_Memory_Access.md  0009_Device_Tree.md  0010_KGDB.md  0011_QEMU.md  0012_Raspberry_Pi.md  0013_Buildroot.md  0014_Yocto.md  0015_Repo.md  0016_Ubuntu_Debian_For_ARM.md  0017_SD_Card_Image.md  0018_Website_For_Board.md  0019_Bootstrap.md  0020_Talk_To_IoT.md  0021_Edge_Computing.md  0022_USB_Protocol.md  0023_Bluetooth_Protocol.md  0024_EtherCAT_Protocol.md  0025_UART_Tool.md  0026_I2C_Bus_Java_Access_Lib.md  0027_Easy_Image_Identification.md  0028_MQTT_Protocol.md  0029_Modbus_Protocol.md  0030_Ending_Align.md  0031_FPGA.md  0032_ASoC.md  0033_V4L2.md  0034_SELinux.md  0034_dump_stack.md  0035_Android-Studio_NDK.md
docs/0035_Android-Studio_NDK/: 0001_Android-Studio_NDK.md  0002_NDK_Module.md  0004_assimp.md  0005_xml2.md  0006_to_string_missing.md  0007_Android_Source_Build_With_External_Lib.md  README.md
docs/0035_Android-Studio_NDK/0003_NDK_Alone/: .gitignore  CMakeLists.txt  README.md
docs/0035_Android-Studio_NDK/0003_NDK_Alone/jni/: Android.mk  Application.mk
docs/0035_Android-Studio_NDK/0003_NDK_Alone/jni/include/: add.h
docs/0035_Android-Studio_NDK/0003_NDK_Alone/jni/src/: add.cpp
